test/quantumIfClassicalUpdate2.slq

def main(){
	x:=H(0:ğ”¹);
	n:=0;
	m:=0;
	if x{
	}else{
		n+=1:!â„¤;
		m=1:!â„¤;
	}
	n+=1; /// error
	m+=1; /// error
	return (x, n, m); /// error
}
